headmenu - такого тега не существует
headmenu - такого тега не существует
меню должно быть всегда маркированным списком с ссылками

--- a/blocks/headmenu.jade
+++ b/blocks/headmenu.jade
@@ -1,9 +1,14 @@
-headmenu.block
+.headmenu.block
     .container
-        .headmenu
-            .headmenu-action Акции
-            .headmenu-delivery Доставка и оплата
-            .headmenu-garants Гарантии
-            .headmenu-swap Легкий обмен
-            .headmenu-contacts Контакты
+        ul.menu
+            li
+                a(href="#") Акции
+            li
+                a(href="#") Доставка и оплата
+            li
+                a(href="#") Гарантии
+            li
+                a(href="#") Легкий обмен
+            li
+                a(href="#") Контакты
         a.login(href='#') Войти
