--- a/blocks/slideshow.jade
+++ b/blocks/slideshow.jade
@@ -6,7 +6,7 @@
                 .slideshow-title Нижнее белье
                 .slideshow-collection Новая коллекция
                 a.btn(href='' title='Посмотреть') Посмотреть
-        img.slideshow-img(src='images/slideshow/slide1.jpg' alt='Calvin Klein')
+        img.slideshow-img(src='images/slideshow/slide-1.png' alt='Calvin Klein')
     .slideshow-item
         .container
             .slideshow-text
@@ -14,7 +14,7 @@
                 .slideshow-title Нижнее белье
                 .slideshow-collection Новая коллекция
                 a.btn(href='' title='Посмотреть') Посмотреть
-            img.slideshow-img(src='images/slideshow/slide1.jpg' alt='Calvin Klein')
+        img.slideshow-img(src='images/slideshow/slide-1.png' alt='Calvin Klein')
     .slideshow-item
         .container
             .slideshow-text
@@ -22,4 +22,4 @@
                 .slideshow-title Нижнее белье
                 .slideshow-collection Новая коллекция
                 a.btn(href='' title='Посмотреть') Посмотреть
-            img.slideshow-img(src='images/slideshow/slide1.jpg' alt='Calvin Klein')
+        img.slideshow-img(src='images/slideshow/slide-1.png' alt='Calvin Klein')
