--- a/blocks/header.jade
+++ b/blocks/header.jade
@@ -11,9 +11,9 @@ header.header.block
             a(href='/')
                 img.img-responsive(src='images/logo.png', alt='')
         .banners
-            .banners-search Поиск
-            .banners-delivery Бесплатная доставка
-            .banners-tesmonials Отзывы о нас
-            .banners-showroom Шоурум
-            .banners-register Регистрация
-            .banners-cart Корзина
+            a.banners-search(href='#') Поиск
+            a.banners-delivery(href='#') Бесплатная доставка
+            a.banners-tesmonials(href='#') Отзывы о нас
+            a.banners-showroom(href='#') Шоурум
+            a.banners-register(href='#') Регистрация
+            a.banners-cart(href='#') Корзина
