--- a/blocks/headmenu.jade
+++ b/blocks/headmenu.jade
@@ -1,9 +1,9 @@
 headmenu.block
     .container
         .headmenu
-            .headmenu-action Акции
-            .headmenu-delivery Доставка и оплата
-            .headmenu-garants Гарантии
-            .headmenu-swap Легкий обмен
-            .headmenu-contacts Контакты
+            a.headmenu-action(href='#') Акции
+            a.headmenu-delivery(href='#') Доставка и оплата
+            a.headmenu-garants(href='#') Гарантии
+            a.headmenu-swap(href='#') Легкий обмен
+            a.headmenu-contacts(href='#') Контакты
         a.login(href='#') Войти
